Corregidos links navbar

--- a/layouts/productos/calzado/index.html
+++ b/layouts/productos/calzado/index.html
@@ -65,20 +65,20 @@
                                 Productos
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/layouts/productos/calzado">Calzado</a></li>
-                                <li><a class="dropdown-item" href="/layouts/productos/accesorios">Accesorios</a></li>
+                                <li><a class="dropdown-item" href="layouts/productos/calzado">Calzado</a></li>
+                                <li><a class="dropdown-item" href="layouts/productos/accesorios">Accesorios</a></li>
                                 <li><a class="dropdown-item" href="/layouts/productos/regionales">Mates y Regionales</a>
                                 </li>
                                 <li>
                             </ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/servicios">Servicios</a>
+                            <a class="nav-link" href="layouts/servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/quienes_somos">Quienes Somos</a>
+                            <a class="nav-link" href="layouts/quienes_somos">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/contacto">Contacto</a>
+                            <a class="nav-link" href="layouts/contacto">Contacto</a>
                         </li>
                         </li>
                     </ul>
