--- a/layouts/servicios/index.html
+++ b/layouts/servicios/index.html
@@ -64,9 +64,9 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/layouts/productos/calzado">Calzado</a></li>
-                <li><a class="dropdown-item" href="/layouts/productos/accesorios">Accesorios</a></li>
-                <li><a class="dropdown-item" href="/layouts/productos/regionales">Mates y Regionales</a>
+                <li><a class="dropdown-item" href="layouts/productos/calzado">Calzado</a></li>
+                <li><a class="dropdown-item" href="layouts/productos/accesorios">Accesorios</a></li>
+                <li><a class="dropdown-item" href="layouts/productos/regionales">Mates y Regionales</a>
                 </li>
                 <li>
               </ul>
@@ -74,10 +74,10 @@
               <a class="nav-link" href="/layouts/servicios">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/layouts/quienes_somos">Quienes Somos</a>
+              <a class="nav-link" href="layouts/quienes_somos">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/layouts/contacto">Contacto</a>
+              <a class="nav-link" href="layouts/contacto">Contacto</a>
             </li>
             </li>
           </ul>
