--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -16,6 +16,8 @@ p {
 i {
     text-decoration: none;
 }
-row{
-    font-family: raleway;
+
+.row {
+    font-family: 'Festive', cursive;
+    font-family: 'Raleway', sans-serif;
 }
