Corregido links a imagenes en accesorios

--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -101,7 +101,7 @@
                     <div class="col-sm-6">
                         <div class="card__acc">
                             <!-- Bloque -->
-                            <img class="card__acc__img" src="/assets/images/walkover__limpiacueros01.jpg"
+                            <img class="card__acc__img" src="../../../assets/images/walkover__limpiacueros01.jpg"
                                 alt="Limpiador de cuero Walkover">
                             <div>
                                 <h3 class="card__acc__title_left">
@@ -115,7 +115,7 @@
                     <div class="col-sm-6">
                         <div class="card__acc">
                             <!-- Bloque -->
-                            <img class="card__acc__img" src="/assets/images/walkover__cremas01.jpg"
+                            <img class="card__acc__img" src="../../../assets/images/walkover__cremas01.jpg"
                                 alt="cremas walkover varios colores">
                             <div>
                                 <h3 class="card__acc__title_right">
@@ -131,7 +131,7 @@
                     <div class="col-sm-6">
                         <div class="card__acc">
                             <!-- Bloque -->
-                            <img class="card__acc__img" src="/assets/images/plantillas__ortopedicas01.jpg"
+                            <img class="card__acc__img" src="../../../assets/images/plantillas__ortopedicas01.jpg"
                                 alt="Plantillas Ortopédicas">
                             <div>
                                 <h3 class="card__acc__title_left">
@@ -145,7 +145,7 @@
                     <div class="col-sm-6">
                         <div class="card__acc">
                             <!-- Bloque -->
-                            <img class="card__acc__img" src="/assets/images/walkover__impermeabilizante01.jpg"
+                            <img class="card__acc__img" src="../../../assets/images/walkover__impermeabilizante01.jpg"
                                 alt="Impermeabilizante de calzado walkover      ">
                             <div>
                                 <h3 class="card__acc__title_right">
