enlace a imagenes corregido en accesorios

--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -37,13 +37,13 @@
         <div class="container">
             <div class="social__icons__header fixed-top justify-content-end">
                 <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
-                        src="/assets/images/instagram.png" alt="Instagram" /></a>
+                        src="../../../assets/images/instagram.png" alt="Instagram" /></a>
                 <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
-                        src="/assets/images/facebook.png" alt="Facebook" /></a>
+                        src="../../../assets/images/facebook.png" alt="Facebook" /></a>
                 <a href="#" target="_blank">
-                    <img class="social__image__header" src="/assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                    <img class="social__image__header" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
                 <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                    <img class="social__image__header" src="/assets/images/email.png" alt="Email" /></a>
+                    <img class="social__image__header" src="../../../assets/images/email.png" alt="Email" /></a>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
@@ -166,13 +166,13 @@
         <!-- Footer Social Icons -->
         <div class=" social__icons__footer">
             <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__footer"
-                    src="/assets/images/instagram.png" alt="Instagram" /></a>
+                    src="../../../assets/images/instagram.png" alt="Instagram" /></a>
             <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__footer"
-                    src="/assets/images/facebook.png" alt="Facebook" /></a>
+                    src="../../../assets/images/facebook.png" alt="Facebook" /></a>
             <a href="#" target="_blank">
-                <img class="social__image__footer" src="/assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                <img class="social__image__footer" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
             <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                <img class="social__image__footer" src="/assets/images/email.png" alt="Email" /></a>
+                <img class="social__image__footer" src="../../../assets/images/email.png" alt="Email" /></a>
         </div>
         <div class="row justify-content-center" style="background-color: #dfc8a5;">copyright Juan Pablo Sauzet 2021
         </div>
