--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -15,7 +15,7 @@
     <!-- META PARA ROBOTS BUSCADORES -->
     <meta name="robots" content="index,follow" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/images/logo_california.png" type="Logo California Zapatero">
+    <link rel="shortcut icon" href="../../../assets/images/logo_california.png" type="Logo California Zapatero">
     <!-- Titulo del Sitio -->
     <title>California Zapatero - Accesorios</title>
     <script src="https://kit.fontawesome.com/9316c69995.js" crossorigin="anonymous"></script>
