--- a/layouts/servicios/index.html
+++ b/layouts/servicios/index.html
@@ -15,7 +15,7 @@
   <!-- META PARA ROBOTS BUSCADORES -->
   <meta name="robots" content="index,follow" />
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/assets/images/logo_california.png" type="Logo California Zapatero">
+  <link rel="shortcut icon" href="../../../assets/images/logo_california.png" type="Logo California Zapatero">
   <!-- Titulo del Sitio -->
   <title>California Zapatero - Servicios</title>
   <script src="https://kit.fontawesome.com/9316c69995.js" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
   <!-- Link a Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,18 +37,18 @@
     <div class="container">
       <div class="social__icons__header fixed-top justify-content-end">
         <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
-            src="/assets/images/instagram.png" alt="Instagram" /></a>
+            src="../../../assets/images/instagram.png" alt="Instagram" /></a>
         <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
-            src="/assets/images/facebook.png" alt="Facebook" /></a>
+            src="../../../assets/images/facebook.png" alt="Facebook" /></a>
         <a href="#" target="_blank">
-          <img class="social__image__header" src="/assets/images/whatsapp.png" alt="Whatsapp" /></a>
+          <img class="social__image__header" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
         <a href="mailto:californiazapatero@gmail.com" target="_blank">
-          <img class="social__image__header" src="/assets/images/email.png" alt="Email" /></a>
+          <img class="social__image__header" src="../../../assets/images/email.png" alt="Email" /></a>
       </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
       <div class="container-fluid">
-        <img src="/assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
+        <img src="../../../assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="/assets/images/plantillas__ortopedicas01.jpg"
+              <img class="card__img" src="../../../assets/images/plantillas__ortopedicas01.jpg"
                 alt="Plantillas Ortopédicas y toma de pedigrafía">
               <div>
                 <h3 class="card__title">
@@ -116,7 +116,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="/assets/images/calzado__cuidado01.jpg"
+              <img class="card__img" src="../../../assets/images/calzado__cuidado01.jpg"
                 alt="Variedad de frascos con tintura de distintos colores para cuidar el calzado">
               <div>
                 <h3 class="card__title">
@@ -133,7 +133,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="/assets/images/sandalias-home.jpg"
+              <img class="card__img" src="../../../assets/images/sandalias-home.jpg"
                 alt="Sandalias de cuero con trabajo realizado de cambio de base">
               <div>
                 <h3 class="card__title">
@@ -148,7 +148,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="/assets/images/mate_termo_01.jpeg"
+              <img class="card__img" src="../../../assets/images/mate_termo_01.jpeg"
                 alt="Termo naranja y mate forrado en cuero">
               <div>
                 <h3 class="card__title">
@@ -170,13 +170,13 @@
     <!-- Footer Social Icons -->
     <div class=" social__icons__footer">
       <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__footer"
-          src="/assets/images/instagram.png" alt="Instagram" /></a>
+          src="../../../assets/images/instagram.png" alt="Instagram" /></a>
       <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__footer"
-          src="/assets/images/facebook.png" alt="Facebook" /></a>
+          src="../../../assets/images/facebook.png" alt="Facebook" /></a>
       <a href="#" target="_blank">
-        <img class="social__image__footer" src="/assets/images/whatsapp.png" alt="Whatsapp" /></a>
+        <img class="social__image__footer" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
       <a href="mailto:californiazapatero@gmail.com" target="_blank">
-        <img class="social__image__footer" src="/assets/images/email.png" alt="Email" /></a>
+        <img class="social__image__footer" src="../../../assets/images/email.png" alt="Email" /></a>
     </div>
     <div class="row justify-content-center" style="background-color: #dfc8a5;">copyright Juan Pablo Sauzet 2021
     </div>
