SERVICIOS - Corregidos enlaces

--- a/layouts/servicios/index.html
+++ b/layouts/servicios/index.html
@@ -37,13 +37,13 @@
     <div class="container">
       <div class="social__icons__header fixed-top justify-content-end">
         <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
-            src="../../../assets/images/instagram.png" alt="Instagram" /></a>
+            src="../../assets/images/instagram.png" alt="Instagram" /></a>
         <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
-            src="../../../assets/images/facebook.png" alt="Facebook" /></a>
+            src="../../assets/images/facebook.png" alt="Facebook" /></a>
         <a href="#" target="_blank">
-          <img class="social__image__header" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
+          <img class="social__image__header" src="../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
         <a href="mailto:californiazapatero@gmail.com" target="_blank">
-          <img class="social__image__header" src="../../../assets/images/email.png" alt="Email" /></a>
+          <img class="social__image__header" src="../../assets/images/email.png" alt="Email" /></a>
       </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../../">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -64,20 +64,20 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="layouts/productos/calzado">Calzado</a></li>
-                <li><a class="dropdown-item" href="layouts/productos/accesorios">Accesorios</a></li>
-                <li><a class="dropdown-item" href="layouts/productos/regionales">Mates y Regionales</a>
+                <li><a class="dropdown-item" href="../productos/calzado/">Calzado</a></li>
+                <li><a class="dropdown-item" href="../productos/accesorios">Accesorios</a></li>
+                <li><a class="dropdown-item" href="../productos/regionales">Mates y Regionales</a>
                 </li>
                 <li>
               </ul>
             <li class="nav-item">
-              <a class="nav-link" href="/layouts/servicios">Servicios</a>
+              <a class="nav-link" href="../servicios">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="layouts/quienes_somos">Quienes Somos</a>
+              <a class="nav-link" href="../quienes_somos">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="layouts/contacto">Contacto</a>
+              <a class="nav-link" href="../contacto">Contacto</a>
             </li>
             </li>
           </ul>
@@ -101,7 +101,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="../../../assets/images/plantillas__ortopedicas01.jpg"
+              <img class="card__img" src="../../assets/images/plantillas__ortopedicas01.jpg"
                 alt="Plantillas Ortopédicas y toma de pedigrafía">
               <div>
                 <h3 class="card__title">
@@ -116,7 +116,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="../../../assets/images/calzado__cuidado01.jpg"
+              <img class="card__img" src="../../assets/images/calzado__cuidado01.jpg"
                 alt="Variedad de frascos con tintura de distintos colores para cuidar el calzado">
               <div>
                 <h3 class="card__title">
@@ -133,7 +133,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="../../../assets/images/sandalias-home.jpg"
+              <img class="card__img" src="../../assets/images/sandalias-home.jpg"
                 alt="Sandalias de cuero con trabajo realizado de cambio de base">
               <div>
                 <h3 class="card__title">
@@ -148,7 +148,7 @@
           <div class="col-sm-6">
             <div class="card">
               <!-- Bloque -->
-              <img class="card__img" src="../../../assets/images/mate_termo_01.jpeg"
+              <img class="card__img" src="../../assets/images/mate_termo_01.jpeg"
                 alt="Termo naranja y mate forrado en cuero">
               <div>
                 <h3 class="card__title">
@@ -170,13 +170,13 @@
     <!-- Footer Social Icons -->
     <div class=" social__icons__footer">
       <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__footer"
-          src="../../../assets/images/instagram.png" alt="Instagram" /></a>
+          src="../../assets/images/instagram.png" alt="Instagram" /></a>
       <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__footer"
-          src="../../../assets/images/facebook.png" alt="Facebook" /></a>
+          src="../../assets/images/facebook.png" alt="Facebook" /></a>
       <a href="#" target="_blank">
-        <img class="social__image__footer" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
+        <img class="social__image__footer" src="../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
       <a href="mailto:californiazapatero@gmail.com" target="_blank">
-        <img class="social__image__footer" src="../../../assets/images/email.png" alt="Email" /></a>
+        <img class="social__image__footer" src="../../assets/images/email.png" alt="Email" /></a>
     </div>
     <div class="row justify-content-center" style="background-color: #dfc8a5;">copyright Juan Pablo Sauzet 2021
     </div>
