--- a/layouts/servicios/index.html
+++ b/layouts/servicios/index.html
@@ -28,7 +28,7 @@
   <!-- Link a Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../../css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../css/style.css" rel="stylesheet">
 </head>
 
 <body>
