REGIONALES - Enlaces corregidos

--- a/layouts/productos/regionales/index.html
+++ b/layouts/productos/regionales/index.html
@@ -37,18 +37,18 @@
         <div class="container">
             <div class="social__icons__header fixed-top justify-content-end">
                 <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
-                        src="../../assets/images/instagram.png" alt="Instagram" /></a>
+                        src="../../../assets/images/instagram.png" alt="Instagram" /></a>
                 <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
-                        src="../../assets/images/facebook.png" alt="Facebook" /></a>
+                        src="../../../assets/images/facebook.png" alt="Facebook" /></a>
                 <a href="#" target="_blank">
-                    <img class="social__image__header" src="../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                    <img class="social__image__header" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
                 <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                    <img class="social__image__header" src="../../assets/images/email.png" alt="Email" /></a>
+                    <img class="social__image__header" src="../../../assets/images/email.png" alt="Email" /></a>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
             <div class="container-fluid">
-                <img src="../../assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
+                <img src="../../../assets/images/logo_california.png" a class="navbar__brand" href="../"></img>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -65,20 +65,20 @@
                                 Productos
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../productos/calzado">Calzado</a></li>
-                                <li><a class="dropdown-item" href="../productos/accesorios">Accesorios</a></li>
-                                <li><a class="dropdown-item" href="../productos/regionales">Mates y Regionales</a>
+                                <li><a class="dropdown-item" href="../calzado/">Calzado</a></li>
+                                <li><a class="dropdown-item" href="../accesorios">Accesorios</a></li>
+                                <li><a class="dropdown-item" href="./">Mates y Regionales</a>
                                 </li>
                                 <li>
                             </ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="../servicios">Servicios</a>
+                            <a class="nav-link" href="../../servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../quienes_somos">Quienes Somos</a>
+                            <a class="nav-link" href="../../quienes_somos">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../contacto">Contacto</a>
+                            <a class="nav-link" href="../../contacto">Contacto</a>
                         </li>
                         </li>
                     </ul>
@@ -152,13 +152,13 @@
         <!-- Footer Social Icons -->
         <div class=" social__icons__footer">
             <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__footer"
-                    src="../../assets/images/instagram.png" alt="Instagram" /></a>
+                    src="../../../assets/images/instagram.png" alt="Instagram" /></a>
             <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__footer"
-                    src="../../assets/images/facebook.png" alt="Facebook" /></a>
+                    src="../../../assets/images/facebook.png" alt="Facebook" /></a>
             <a href="#" target="_blank">
-                <img class="social__image__footer" src="../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                <img class="social__image__footer" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
             <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                <img class="social__image__footer" src="../../assets/images/email.png" alt="Email" /></a>
+                <img class="social__image__footer" src="../../../assets/images/email.png" alt="Email" /></a>
         </div>
         <div class="row justify-content-center" style="background-color: #dfc8a5;">copyright Juan Pablo Sauzet 2021
         </div>
