--- a/layouts/productos/regionales/index.html
+++ b/layouts/productos/regionales/index.html
@@ -48,7 +48,7 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
             <div class="container-fluid">
-                <img src="../../../assets/images/logo_california.png" a class="navbar__brand" href="../"></img>
+                <img src="../../../assets/images/logo_california.png" a class="navbar__brand" href="../../../"></img>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
