--- a/layouts/productos/regionales/index.html
+++ b/layouts/productos/regionales/index.html
@@ -57,7 +57,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="../../../">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
