--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -48,7 +48,9 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
             <div class="container-fluid">
-                <img src="../../../assets/images/logo_california.png" a class="navbar__brand" href="../"></img>
+                <a href="../../../"> <img src="../../../assets/images/logo_california.png" a class="navbar__brand">
+                </a>
+                <!-- <img src="../../assets/images/logo_california.png" a class="navbar__brand" href="../../"></img> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
