Carousel y Cards nuevas

--- a/layouts/productos/accesorios/index.html
+++ b/layouts/productos/accesorios/index.html
@@ -50,7 +50,6 @@
             <div class="container-fluid">
                 <a href="../../../"> <img src="../../../assets/images/logo_california.png" a class="navbar__brand">
                 </a>
-                <!-- <img src="../../assets/images/logo_california.png" a class="navbar__brand" href="../../"></img> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -97,70 +96,131 @@
         <h1>
             <p class="text-center" margin-top:1rem>Accesorios</p>
         </h1>
-        <div class="card__acc__container">
-            <div class="container-main" style="margin-bottom: 2rem;">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card__acc">
-                            <!-- Bloque -->
-                            <img class="card__acc__img" src="../../../assets/images/walkover__limpiacueros01.jpg"
-                                alt="Limpiador de cuero Walkover">
-                            <div>
-                                <h3 class="card__acc__title_left">
-                                    Limpiador de cuero Walkover</h3>
-                                <p class="card__acc__text">
-                                    Práctivo y efectivo limpiador de cuero en spray. Elimina las manchas.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card__acc">
-                            <!-- Bloque -->
-                            <img class="card__acc__img" src="../../../assets/images/walkover__cremas01.jpg"
-                                alt="cremas walkover varios colores">
-                            <div>
-                                <h3 class="card__acc__title_right">
-                                    Cremas Walkover</h3>
-                                <p class="card__acc__text">
-                                    Cremas Walkover para cuero, tenemos todos los colores.
-                                </p>
-                            </div>
-                        </div>
+
+        <div class="row text-center">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__brillo01.jpg" class="card-img-top"
+                        alt="Brillo para cuero marca Wassington">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card__acc">
-                            <!-- Bloque -->
-                            <img class="card__acc__img" src="../../../assets/images/plantillas__ortopedicas01.jpg"
-                                alt="Plantillas Ortopédicas">
-                            <div>
-                                <h3 class="card__acc__title_left">
-                                    Plantillas Ortopédicas</h3>
-                                <p class="card__acc__text">
-                                    Plantillas ortopedicas, se realizan mediante toma de pedigrafía.
-                                </p>
-                            </div>
-                        </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__cepillos01.jpg" class="card-img-top"
+                        alt="Cepillos para mantener tu calzado impecable">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="card__acc">
-                            <!-- Bloque -->
-                            <img class="card__acc__img" src="../../../assets/images/walkover__impermeabilizante01.jpg"
-                                alt="Impermeabilizante de calzado walkover      ">
-                            <div>
-                                <h3 class="card__acc__title_right">
-                                    Impermeabilizante Walkover</h3>
-                                <p class="card__acc__text">
-                                    Impermeabilizante de calzado Walkover. No dejes que la lluvia dañe tu calzado.
-                                </p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__estirador01.jpg" class="card-img-top"
+                        alt="Estirador de calzado marca Wassington">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__impermeabilizador01.jpg" class="card-img-top"
+                        alt="Liquido impermeabilizador marca Wassington">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__limpiador__cuero01.jpg" class="card-img-top"
+                        alt="Limpiador de cuero marca Wassington">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__limpiador__gamuza01.jpg" class="card-img-top"
+                        alt="Limpiador para gamuzas y nobuck marca Wassington">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__limpiador__rex01.jpg" class="card-img-top"
+                        alt="Limpiador textil marca Rex">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__pegasus__cordones01l.jpg" class="card-img-top"
+                        alt="Variedad en cordones">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__plantilllas01.jpg" class="card-img-top"
+                        alt="Plantillas deportivas">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__plantilllas02.jpg" class="card-img-top"
+                        alt="Plantillas de cuero y media plantilla">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__renovador01.jpg" class="card-img-top"
+                        alt="Renovador de cueros marca Rex">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-1 mb-1">
+                <div class="card">
+                    <img src="../../../assets/images/accesorios__engrasado01.jpg" class="card-img-top"
+                        alt="Engrasador de cueros marca Rex">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
                 </div>
             </div>
         </div>
+
+
     </main>
 
     <!-- INICIO FOOTER -->
