--- a/css/style.css
+++ b/css/style.css
@@ -207,46 +207,11 @@ p.descripcion-acc {
   font-size: 1.2rem;
 }
 
-.card__acc__title_right, .card__acc__title_left {
-  font-size: 1.4rem;
-  color: #8c140b;
-  background-color: #dfc8a5;
-  text-decoration: underline;
-  display: flex;
-  justify-content: center;
-}
-
-.card__acc {
-  display: inline-block;
-  justify-content: center;
+.card {
   background-color: transparent;
-  height: -10px;
-  width: 350px;
-  border: solid;
-}
-
-.card__acc__img {
-  width: 100%;
-  height: 100%;
-  margin-right: 30px;
-}
-
-.card__acc__container {
-  display: flex;
-  justify-content: space-around;
-}
-
-.card__acc__title_right {
-  color: #dfc8a5;
-  background-color: #8c140b;
-}
-
-p.card__acc__text {
-  background-color: #dfc8a5;
+  border: none;
   color: #8c140b;
-  font-style: italic;
-  text-align: center;
-  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 /* Estilo para Productos - Regionales */
