--- a/layouts/productos/calzado/index.html
+++ b/layouts/productos/calzado/index.html
@@ -50,7 +50,6 @@
             <div class="container-fluid">
                 <a href="../../../"> <img src="../../../assets/images/logo_california.png" a class="navbar__brand">
                 </a>
-                <!-- <img src="../../assets/images/logo_california.png" a class="navbar__brand" href="../../"></img> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -98,69 +97,50 @@
             <p class="text-center" margin-top:1rem>Calzado</p>
         </h1>
 
-        <!-- Carousel -->
-        <div id="hornitos" class="carousel slide m-auto w-50" data-bs-ride="carousel">
-
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="2"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="3"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="4"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="5"></button>
-                <button type="button" data-bs-target="#hornitos" data-bs-slide-to="6"></button>
-            </div>
-
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../../../assets/images/hornitos-azules.jpg" alt="Hornitos Azul" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 42</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/images/hornitos-beige.jpg" alt="Hornitos Beige" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 40</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/images/hornitos-comic2.jpg" alt="Hornitos Comic" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 40</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/images/hornitos-fucsia.jpg" alt="Hornitos Fucsia" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 38</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/images/hornitos-negros.jpg" alt="Hornitos Negros" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 44</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="../../../assets/images/Hornitos-gris2.jpg" alt="Hornitos Gris" class="d-block m-auto">
-                    <div class="carousel-caption">
-                        <p>Talles del 34 al 44</p>
+        <div class="container">
+            <div class="row text-center">
+                <div class="-12 col-sm-12 col-md-12col-lg-12 mt-2 mb-2 m-auto">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../../../assets/images/hornitos-azules.jpg" class="d-block w-100"
+                                    alt="Hornitos en color azul">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../../../assets/images/hornitos-beige.jpg" class="d-block w-100"
+                                    alt="Hornitos en color beige">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../../../assets/images/hornitos-comic2.jpg" class="d-block w-100"
+                                    alt="Hornitos estampado comic">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../../../assets/images/hornitos-fucsia.jpg" class="d-block w-100"
+                                    alt="Hornitos en color fucsia">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../../../assets/images/hornitos-negros.jpg" class="d-block w-100"
+                                    alt="Hornitos en color negro">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../../../assets/images/Hornitos-gris2.jpg" class="d-block w-100"
+                                    alt="Hornitos en color gris">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
             </div>
-
-            <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#hornitos" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#hornitos" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
         </div>
-
     </main>
 
     <!-- INICIO FOOTER -->
@@ -168,13 +148,13 @@
         <!-- Footer Social Icons -->
         <div class=" social__icons__footer">
             <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__footer"
-                    src="../../assets/images/instagram.png" alt="Instagram" /></a>
+                    src="../../../assets/images/instagram.png" alt="Instagram" /></a>
             <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__footer"
-                    src="../../assets/images/facebook.png" alt="Facebook" /></a>
+                    src="../../../assets/images/facebook.png" alt="Facebook" /></a>
             <a href="#" target="_blank">
-                <img class="social__image__footer" src="../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                <img class="social__image__footer" src="../../../assets/images/whatsapp.png" alt="Whatsapp" /></a>
             <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                <img class="social__image__footer" src="../../assets/images/email.png" alt="Email" /></a>
+                <img class="social__image__footer" src="../../../assets/images/email.png" alt="Email" /></a>
         </div>
         <div class="row justify-content-center" style="background-color: #dfc8a5;">copyright Juan Pablo Sauzet 2021
         </div>
