--- a/scss/_accesorios.scss
+++ b/scss/_accesorios.scss
@@ -31,36 +31,9 @@ p.descripcion-acc{
     justify-content: center;
 }
 
-.card__acc{
-    display: inline-block;
-    justify-content: center;
+.card{
     background-color: transparent;
-    height: -10px;
-    width: 350px;
-    border: solid;
-}
-.card__acc__img{
-    width: 100%;
-    height: 100%;
-    margin-right: 30px;
-}
-
-.card__acc__container{
-    display: flex;
-    justify-content: space-around;
-}
-
-.card__acc__title_left{
-    @extend %accesorios__title;
-}
-
-.card__acc__title_right{
-    @extend %accesorios__title;
-    color: #dfc8a5;
-    background-color: #8c140b;
-
-}
-
-p.card__acc__text{
-    @include descripcion-acc;
+    border: none;
+    color: #8c140b;
+    font-weight: bold;
 }
