Seccion ACCESORIOS emprolijada

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -20,3 +20,13 @@ i {
 .row {
     font-family: 'Raleway', sans-serif;
 }
+.btn{
+    background-color: #dfc8a5;
+    color: #8c140b;
+    border: none;
+}
+.btn:hover{
+    background-color: #8c140b;
+    color: #dfc8a5;
+    border: none;
+}
