--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,18 @@ i {
   font-family: "Raleway", sans-serif;
 }
 
+.btn {
+  background-color: #dfc8a5;
+  color: #8c140b;
+  border: none;
+}
+
+.btn:hover {
+  background-color: #8c140b;
+  color: #dfc8a5;
+  border: none;
+}
+
 /* ESTILOS PARA REDES SOCIALES HEADER */
 .navbar__brand {
   height: 100px;
@@ -199,19 +211,62 @@ input[type=submit] {
   box-sizing: border-box;
 }
 
-p.descripcion-acc {
-  background-color: #dfc8a5;
-  color: #8c140b;
-  font-style: italic;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
 .card {
   background-color: transparent;
   border: none;
+  font-weight: bold;
+}
+
+.btn-primary {
+  background-color: #dfc8a5;
   color: #8c140b;
   font-weight: bold;
+  border: none;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #dfc8a5;
+  border-color: #8c140b;
+}
+
+.btn__accesorios {
+  cursor: pointer;
+  position: relative;
+  padding: 10px 20px;
+  background: white;
+  font-size: 1.2rem;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: all 1s;
+}
+.btn__accesorios:after, .btn__accesorios:before {
+  content: " ";
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border: 0px solid #fff;
+  transition: all 1s;
+}
+.btn__accesorios:after {
+  top: -1px;
+  left: -1px;
+  border-top: 5px solid #dfc8a5;
+  border-left: 5px solid #8c140b;
+}
+.btn__accesorios:before {
+  bottom: -1px;
+  right: -1px;
+  border-bottom: 5px solid #8c140b;
+  border-right: 5px solid #dfc8a5;
+}
+.btn__accesorios:hover {
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.btn__accesorios:hover:before, .btn__accesorios:hover:after {
+  width: 100%;
+  height: 100%;
 }
 
 /* Estilo para Productos - Regionales */
