--- a/scss/_accesorios.scss
+++ b/scss/_accesorios.scss
@@ -6,34 +6,64 @@
     box-sizing: border-box;
 }
 
-@mixin descripcion-acc{
-    background-color: #dfc8a5;
-    color: #8c140b;
-    font-style: italic;
-    text-align: center;
-    font-size: 1.2rem;
-}
-p.descripcion-acc{
-    @include descripcion-acc;
-}
-@mixin acc-img{
-    width:250px;
-    height:450px;
-    border: solid;
-}
-
-%accesorios__title {
-    font-size: 1.4rem;
-    color: #8c140b;
-    background-color: #dfc8a5;
-    text-decoration: underline;
-    display: flex;
-    justify-content: center;
-}
-
 .card{
     background-color: transparent;
     border: none;
-    color: #8c140b;
     font-weight: bold;
 }
+
+.btn-primary{
+    background-color: #dfc8a5;
+    color: #8c140b;
+    font-weight: bold;
+    border: none;    
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #dfc8a5;
+    border-color: #8c140b;
+}
+
+.btn__accesorios{
+    cursor:pointer;
+      position:relative;
+      padding:10px 20px;
+      background:white;
+      font-size:1.2rem;
+      border-top-right-radius:10px;
+      border-bottom-left-radius:10px;
+      transition:all 1s;
+      &:after,&:before{
+        content:" ";
+        width:10px;
+        height:10px;
+        position:absolute;
+        border :0px solid #fff;
+        transition:all 1s;
+        }
+      &:after{
+        top:-   1px;
+        left:-1px;
+        border-top:5px solid #dfc8a5;
+        border-left:5px solid #8c140b;
+      }
+      &:before{
+        bottom:-1px;
+        right:-1px;
+        border-bottom:5px solid #8c140b;
+        border-right:5px solid #dfc8a5;
+      }
+      &:hover{
+        border-top-right-radius:0px;
+      border-bottom-left-radius:0px;
+        // background:rgba(0,0,0,.5);
+        // color:white;
+        &:before,&:after{
+          
+          width:100%;
+          height:100%;
+          // border-color:white;
+        }
+      }
+    }
